# MIRA

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
config/: service_registry.json
docs/: agent-workflow.md  architecture.excalidraw  architecture.md  component_worker.excalidraw  mcp-clients.md  mcp-server-comparison.md  workflow_investigation.excalidraw
src/mira/: __init__.py
src/mira/config/: __init__.py  settings.py
src/mira/dispatcher/: __init__.py  main.py  routes.py
src/mira/mcp_clients/: __init__.py  azure_devops_client.py  datadog_client.py  mcp_toolset.py
src/mira/registry/: __init__.py  models.py  service_registry.py
src/mira/utils/: __init__.py  notifications.py
src/mira/worker/: __init__.py  agent.py  tools.py
tests/: test_dispatcher.py  test_mcp_toolset.py  test_notifications.py  test_registry.py  test_worker.py
